--- a/wp-content/themes/stereoclub-child/style.css
+++ b/wp-content/themes/stereoclub-child/style.css
@@ -10,6 +10,32 @@ Version: 1.0.0.
 
 @import url('../stereoclub-wpl/style.css');
 
+body, input, textarea {
+  color: #333;
+  font-size: 14px;
+  font-family: 'Titillium Web', sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+h1,h2,h3,h4,h5,h6 {
+  clear: both;
+  font-family: 'Titillium Web', sans-serif;
+  font-weight: 200;
+}
+h2 {
+  color: #002B65;
+}
+
+.site-navigation .menu li a {
+  font-family: 'Titillium Web', sans-serif;
+  font-weight: 200;
+}
+.list-block-item .entry-description .entry-head {
+  font-family: 'Titillium Web', sans-serif;
+  font-weight: 200;
+}
+
 .link-icon {
   background-image: url('images/link-icon.png');
   background-repeat: no-repeat;
