Updated menu styling

--- a/wp-content/themes/stereoclub-child/style.css
+++ b/wp-content/themes/stereoclub-child/style.css
@@ -39,7 +39,12 @@ h2 {
   background: #fff!important;
 }
 
-.site-navigation ul.menu ul a {
+.site-navigation ul.sub-menu li:hover a {
+  color: #fff;
+}
+
+.site-navigation ul.menu ul a,
+.site-navigation ul.sub-menu ul.sub-menu li a {
   color: #000;
 }
 
