--- a/wp-content/themes/stereoclub-child/style.css
+++ b/wp-content/themes/stereoclub-child/style.css
@@ -15,7 +15,7 @@ body, input, textarea {
   font-size: 14px;
   font-family: 'Titillium Web', sans-serif;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.4;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -26,11 +26,24 @@ h1,h2,h3,h4,h5,h6 {
 h2 {
   font-size: 24px;
   color: #002B65;
-  line-height: 1em;
-  margin-bottom: 0.3em;
+  line-height: 1.4;
+  margin-bottom: 15px;
 }
 h1 {
   font-size: 30px;
+  margin-bottom: 15px;
+}
+
+aside{
+  margin-bottom: 40px;
+}
+
+p:last-of-type {
+  margin-bottom: 0;
+}
+
+ul, ol {
+  margin: 0px 0px 1.5em 15px;
 }
 
 .widget ul li:hover {
@@ -38,8 +51,25 @@ h1 {
     animation-name: none;
 }
 
+.widget .textwidget {
+  /*padding: 20px 40px 20px 40px;*/
+  padding: 40px;
+}
+.entry-pagination {
+    padding: 40px;
+    padding-top: 0;
+}
+
+.comments {
+  padding: 40px;
+}
+
 .widget_text:last-child .textwidget {
   margin-bottom: 0;
+}
+
+.widget ul li {
+  padding-left: 40px;
 }
 
 .site-header .container_12 .grid_12,
@@ -51,15 +81,26 @@ h1 {
   /*background-color: #fff;*/
   background-color: rgba(255, 255, 255, 0.9);
 }
+.comments .entry-content {
+  background-color: transparent;
+}
 
 .widget ul li,
 .latest-item {
   background: none;
 }
 
+.entry-header {
+    padding: 13px 40px;
+}
+
 /*
  * MENU STYLING
 */
+
+#menu-main-menu {
+  padding-left: 50px;
+}
 
 #site-navigation {
   margin-top: 0!important;
@@ -77,6 +118,10 @@ h1 {
 .site-navigation ul.menu ul a {
   font-size: 14px;
   padding: 10px 10px 10px;
+}
+
+.site-navigation .menu .sub-menu {
+  left: -15px;
 }
 
 .site-navigation .menu .sub-menu ul {
@@ -172,13 +217,17 @@ h1 {
 }
 
 .inspicoslatestposts {
-  margin-bottom: 1.5em;
+  margin-bottom: 1.4;
 }
 
 .inspicoslatestposts .entry-head {
-  line-height: 1em;
+  line-height: 1.4;
   font-size: 26px;
   margin-bottom: 10px;
+}
+
+.inspicoslatestposts .link-icon {
+  margin-top: 1.5em;
 }
 
 #secondary .inspicoslatestposts .entry-header.first {
@@ -186,12 +235,14 @@ h1 {
 }
 
 .entry-title {
-  line-height: 1em;
-  margin-bottom: 10px;
+  font-size: 30px;
+  line-height: 1.4;
+  margin-bottom: 0px;
 }
 
 .post-date {
   margin-bottom: 15px;
+  margin-top: 15px;
   display: block;
 }
 
@@ -216,7 +267,7 @@ h2.entry-title {
 }
 
 .list-entry-content {
-  padding: 1.5em;
+  padding: 40px;
 }
 
 .latest-item .entry-thumb img {
@@ -287,6 +338,10 @@ h2.entry-title {
 
 }
 
+.entry-header .more-options {
+  margin-top: 0;
+}
+
 .more-options .share-buttons li {
   float: left;
   display: inline;
@@ -346,6 +401,9 @@ h2.entry-title {
 
 .entry-content-post {
   overflow: hidden;
+  border-bottom: none;
+  /*padding: 0px 40px 20px 40px;*/
+  padding: 40px;
 }
 
 .profile-image {
