--- a/wp-content/themes/stereoclub-child/style.css
+++ b/wp-content/themes/stereoclub-child/style.css
@@ -461,6 +461,7 @@ h2.entry-title {
 
 .site-footer #status-info {
   background: #8c8f95!important;
+  padding-top: 10px;
 }
 
 .site-footer .textwidget a,
@@ -484,12 +485,17 @@ h2.entry-title {
   padding-left: 40px;
 }
 
+.site-footer .widget .textwidget {
+  padding-bottom: 0;
+}
+
 .site-footer .first .entry-header {
   color: #002B65;
 }
 
 .site-footer .entry-header {
   padding-bottom: 0;
+  padding-top: 0;
 }
 
 .site-footer .widget .textwidget {
