Fixed responsive styling in footer

--- a/wp-content/themes/stereoclub-child/style.css
+++ b/wp-content/themes/stereoclub-child/style.css
@@ -561,6 +561,9 @@ h2.entry-title {
     margin-right: 20px;
     margin-bottom: 10px;
   }
+  .site-footer .grid_3 {
+    margin-left: 0px;
+  }
 }
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
@@ -571,6 +574,9 @@ h2.entry-title {
     margin-right: 20px;
     margin-bottom: 10px;
   }
+  .site-footer .grid_3 {
+    margin-left: 0px;
+  }
 }
 
 @media (max-width: 320px) {
@@ -580,6 +586,9 @@ h2.entry-title {
   .socialnetworking {
     margin-right: 20px;
     margin-bottom: 10px;
+  }
+  .site-footer .grid_3 {
+    margin-left: 0px;
   }
 }
 
