--- a/wp-content/themes/stereoclub-child/style.css
+++ b/wp-content/themes/stereoclub-child/style.css
@@ -38,6 +38,10 @@ aside{
   margin-bottom: 40px;
 }
 
+.header-image .grid_12{
+  margin-top: 300px; 
+}
+
 .home #primary {
   margin-bottom: 40px;
 }
