--- a/wp-content/themes/stereoclub-child/style.css
+++ b/wp-content/themes/stereoclub-child/style.css
@@ -117,6 +117,10 @@ hr {
   /*background-color: #fff;*/
   background-color: rgba(255, 255, 255, 0.9);
 }
+.entry-content-list figure {
+  padding: 40px;
+  padding-bottom: 0px;
+}
 .comments .entry-content {
   background-color: transparent;
 }
