--- a/wp-content/themes/stereoclub-child/style.css
+++ b/wp-content/themes/stereoclub-child/style.css
@@ -23,6 +23,9 @@ h1,h2,h3,h4,h5,h6 {
   font-family: 'Titillium Web', sans-serif;
   font-weight: 200;
 }
+.entry-content-post h1 {
+  color: #002B65;
+}
 h2 {
   font-size: 24px;
   color: #002B65;
