--- a/wp-content/themes/stereoclub-child/style.css
+++ b/wp-content/themes/stereoclub-child/style.css
@@ -18,6 +18,12 @@ body, input, textarea {
   line-height: 1.4;
 }
 
+.cancer-logo{
+  padding-left: 40px;
+  padding-right: 20px;
+  text-align: right;
+}
+
 h1,h2,h3,h4,h5,h6 {
   clear: both;
   font-family: 'Titillium Web', sans-serif;
